# t7g-ml

./: .flake8  .gitignore  .gitmodules  LICENSE  Makefile  README.md  TODO  TODO.md  build.txt  micro_3.c  micro_4.c  micro_mcts.c  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  t7g_core.h  t7g_env.py  t7g_game.py  t7g_play.py  t7g_train.py  t7g_train_vs_shoxx.py  t7g_utils.py  t7g_virt_env.py  t7g_virt_env_plus_C_shoxx.py  train.py  train_curriculum.py
docs/: performance_notes.md  value_blending.md
env/: README.md  action_mask_wrapper.py  env_t7g.py  env_virt.py  env_virt_minimax.py  minimax_wrapper.py  noisy_minimax_wrapper.py  position_curriculum.py  position_curriculum_wrapper.py  random_opponent_wrapper.py  symmetry_wrapper.py
lib/: bc.py  beehive.py  beehive_minimax.py  curriculum.py  device_utils.py  dual_network.py  eval_db.py  evaluation.py  inference_server.py  mcgs.py  mcts.py  net2.py  networks.py  paths.py  remote_mcts.py  reward_functions.py  t7g.py  train_workers.py  training.py  uai_engine.py
scripts/: benchmark_sims.py  eval_db.py  export_onnx_web.py  generate_position_bank.py  play_beehive.py  play_gui.py  play_mcts.py  play_real.py  scratch.py  self_play.py  train_mcts.py  train_stauf.py
src/: bb_core.h  beehive_4.c  micro_3.c  micro_mcts.c  micro_mcts_heuristic.c
tests/: README.md  conftest.py  test_action_masking_stability.py  test_debug_rendering.py  test_environment.py  test_eval_db.py  test_game_logic.py  test_gate.py  test_legal_mask.py  test_mcgs.py  test_micro_mcts.c  test_minimax.py  test_minimax_correctness.py  test_net2.py  (+8 more)
(+7 files in other folders)
